@@ -3,9 +3,10 @@
 /// @brief The different tasks that can be performed
 typedef unsigned int Task;
 
+// TODO: remove no-task
 #define TASK_NO_TASK        -1
-#define TASK_LANE_KEEPING   1
-#define TASK_SPEED_CONTROL  2
+#define TASK_LANE_KEEPING   0
+#define TASK_SPEED_CONTROL  1
 
 /// @brief The different ways a user can be indicated about an intervention
 typedef struct Indicator
@@ -18,9 +19,10 @@ typedef struct Indicator
 /// @brief The different interventions that can be done
 typedef unsigned int InterventionType;
 
+// TODO: remove INTERVENTION_TYPE_ASK_FOR 
+#define INTERVENTION_TYPE_ASK_FOR            -1  
 #define INTERVENTION_TYPE_NO_SIGNALS         0
-#define INTERVENTION_TYPE_ONLY_SIGNALS       1
-#define INTERVENTION_TYPE_ASK_FOR            -1      
+#define INTERVENTION_TYPE_ONLY_SIGNALS       1     
 #define INTERVENTION_TYPE_SHARED_CONTROL     2
 #define INTERVENTION_TYPE_COMPLETE_TAKEOVER  3
 
