@@ -67,6 +67,7 @@ Changed:
                 changed GfuiObject
             guimenu.cpp
                 added   GfuiMenuCreateRadioButtonListControl
+                changed GfuiControlGetBoolean: made public and renamed to fit the api function naming scheme.
             guimenu.h
                 added   GFMNU_ATTR_DEFAULT_VALUE
                 added   GFMNU_TYPE_RADIO_BUTTON_LIST
@@ -81,7 +82,7 @@ Changed:
                 added   tfuiRadioButtonCallback
                 added   GfuiMenuCreateRadioButtonListControl()
 
-                added   getControlBoolean()
+                added   GfuiControlGetBoolean()
                 
                 added   GfuiRadioButtonListCreate()
                 added   GfuiRadioButtonListSetSelected()
